--- a/preferences.html
+++ b/preferences.html
@@ -33,9 +33,9 @@
       const CHANNELS = [
         { key: "EMAIL", label: "Email" },
         { key: "SMS", label: "SMS" },
-        { key: "PUSH", label: "In-App Push" },
-        { key: "VOICE", label: "Voice Call" },
-        { key: "MAIL", label: "Mail" }
+        { key: "PUSH", label: "In-App Push" }
+      //  { key: "VOICE", label: "Voice Call" }
+      //  { key: "MAIL", label: "Mail" }
       ];
 
       const PROCESSES = [
