--- a/preferences.html
+++ b/preferences.html
@@ -33,8 +33,8 @@
         { key: "EMAIL", label: "Email" },
         { key: "SMS", label: "SMS" },
         { key: "PUSH", label: "In-App Push" },
-        { key: "VOICE", label: "Voice Call" },
-        { key: "MAIL", label: "Mail" }
+      //  { key: "VOICE", label: "Voice Call" },
+      //  { key: "MAIL", label: "Mail" }
       ];
 
       const PROCESSES = [
