--- a/preferences.html
+++ b/preferences.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Communication Preferences</title>
 
-  <script
+  <script>
     id="sap-ui-bootstrap"
     src="https://sdk.openui5.org/resources/sap-ui-core.js"
     data-sap-ui-theme="sap_horizon"
@@ -13,7 +13,7 @@
     data-sap-ui-async="true"
     data-sap-ui-compatVersion="edge"
     data-sap-ui-preload="async"
-  ></script>
+  </script>
 
   <style>
     html, body, #content { height: 100%; margin: 0; }
