--- a/preferences.html
+++ b/preferences.html
@@ -17,7 +17,7 @@
 
   <style>
     html, body, #content { height: 100%; margin: 0; }
-    .pageWrap { max-width: 1100px; margin: 0 auto; }
+    .pageWrap { width: 80%; max-width: 1400px; margin: 0 auto; }
     .muted { opacity: 0.75; }
     .tinyTopPad { padding-top: 0.25rem; }
   </style>
